@@ -21,14 +21,12 @@
     <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
     <pattern.class.itest>**/*ITest.*,**/*TCTest.*</pattern.class.itest>
 
-    <springboot.version>3.1.5</springboot.version>
+    <springboot.version>3.3.3</springboot.version>
 
     <!-- libs (alphabetical) -->
-    <avro.version>1.11.3</avro.version>
-
-    <avro-kotlin.version>1.11.3.0</avro-kotlin.version>
-    <axon-bom.version>4.9.4</axon-bom.version>
-
+    <avro.version>1.12.0</avro.version>
+    <avro-kotlin.version>1.12.2.0</avro-kotlin.version>
+    <axon-bom.version>4.10.0</axon-bom.version>
   </properties>
 
   <modules>
@@ -36,6 +34,7 @@
     <module>../../lib</module>
     <module>../../serializer</module>
     <module>../../server-plugin</module>
+    <module>../coverage-aggregator</module>
   </modules>
 
   <dependencyManagement>
@@ -59,10 +58,20 @@
       </dependency>
 
       <dependency>
-        <groupId>io.toolisticon.lib</groupId>
-        <artifactId>avro-kotlin</artifactId>
+        <groupId>io.toolisticon.kotlin.avro</groupId>
+        <artifactId>avro-kotlin-bom</artifactId>
         <version>${avro-kotlin.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
       </dependency>
+
+      <dependency>
+        <groupId>io.holixon.axon.avro</groupId>
+        <artifactId>axon-avro-lib-test</artifactId>
+        <version>${project.version}</version>
+        <scope>test</scope>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -83,19 +92,15 @@
   </dependencies>
 
   <build>
-    <defaultGoal>clean jacoco:prepare verify</defaultGoal>
+    <defaultGoal>clean verify</defaultGoal>
     <pluginManagement>
-      <!-- Coverage metering -->
       <plugins>
-
         <plugin>
           <!-- kotlin compiler -->
           <groupId>org.jetbrains.kotlin</groupId>
           <artifactId>kotlin-maven-plugin</artifactId>
           <configuration>
             <jvmTarget>${java.version}</jvmTarget>
-            <apiVersion>1.9</apiVersion>
-            <languageVersion>1.9</languageVersion>
             <args>
               <arg>-Xjsr305=strict</arg>
             </args>
@@ -121,37 +126,6 @@
         </plugin>
 
         <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <failIfNoTests>true</failIfNoTests>
-            <excludes>
-              <exclude>${pattern.class.itest}</exclude>
-            </excludes>
-            <!-- Sets the VM argument line used when unit tests are run. -->
-            <!-- prevent the annoying ForkedBooter process from stealing window focus on Mac OS -->
-            <argLine>-Djava.awt.headless=true @{surefireArgLine} -XX:+StartAttachListener --add-opens java.base/java.util=ALL-UNNAMED</argLine>
-            <systemPropertyVariables>
-              <jgiven.report.dir>${project.build.directory}/jgiven-reports</jgiven.report.dir>
-            </systemPropertyVariables>
-          </configuration>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <configuration>
-            <useSystemClassLoader>false</useSystemClassLoader>
-            <includes>
-              <include>${pattern.class.itest}</include>
-            </includes>
-            <!-- Sets the VM argument line used when integration tests are run. -->
-            <!-- prevent the annoying ForkedBooter process from stealing window focus on Mac OS -->
-            <!-- the add-opens is required for XStream -->
-            <argLine>-Djava.awt.headless=true @{failsafeArgLine} -XX:+StartAttachListener --add-opens java.base/java.util=ALL-UNNAMED</argLine>
-          </configuration>
-        </plugin>
-
-        <plugin>
           <groupId>org.apache.avro</groupId>
           <artifactId>avro-maven-plugin</artifactId>
           <executions>
@@ -173,14 +147,34 @@
 
     <plugins>
       <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
 
+  <profiles>
+    <!-- TODO remove this as soon as the new version of parent with patched verify cycle is released and used -->
+    <profile>
+      <id>itest</id>
+      <build>
+        <defaultGoal>verify</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>verify</id>
+                <goals>
+                  <goal>verify</goal>
+                </goals>
+                <phase>verify</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
